// Data structures related to email and push notifications.

import "com/janknspank/database/extensions.proto";

option java_package = "com.janknspank.proto";
option java_outer_classname = "NotificationsProto";

enum DeviceType {
  UNKNOWN = 0;
  ANDROID = 1;
  IOS = 2;
  EMAIL = 3;
}

message DeviceRegistration {
  option (database_collection) = "MongoDB.DeviceRegistration";

  // Unique ID for the user ID + device registration ID pair.
  optional string id = 1 [
    (required) = YES,
    (storage_method) = PRIMARY_KEY,
    (string_length) = 24,
    (string_charset) = LATIN1
  ];

  optional string user_id = 2 [
    (required) = YES,
    (storage_method) = INDEX,
    (string_length) = 24,
    (string_charset) = LATIN1
  ];

  optional DeviceType device_type = 3 [
    (required) = YES
  ];

  // Opaque device type-specific identifier for the phone / tablet / whatever
  // we should send notifications to.  iOS calls this a device ID, Android calls
  // it a registration ID.
  optional string device_id = 4 [
    (required) = YES,
    (string_length) = 100,
    (string_charset) = LATIN1
  ];

  optional int64 create_time = 5 [
    (required) = YES
  ];
}

// Historical record of what notifications we've sent and to whom.
message Notification {
  option (database_collection) = "MySQL.PushNotification";

  optional string id = 1 [
    (required) = YES,
    (storage_method) = PRIMARY_KEY,
    (string_length) = 24,
    (string_charset) = LATIN1,
    (client_serialization) = EXCLUDE
  ];

  optional int64 create_time = 2 [
    (required) = YES,
    (storage_method) = INDEX
  ];

  // If the user clicked on the notification, and the app opened and sent us
  // a ping, this is the time that happened.
  optional int64 click_time = 3 [
    (storage_method) = PULL_OUT
  ];

  // The user who we sent the notification to.
  optional string user_id = 4 [
    (required) = YES,
    (storage_method) = INDEX,
    (string_length) = 24,
    (string_charset) = LATIN1
  ];

  // Optional: If we mentioned a specific article, this is the URL ID of that
  // article.
  optional string url_id = 5 [
    (storage_method) = PULL_OUT,
    (string_length) = 24,
    (string_charset) = LATIN1
  ];

  // Optional: If we mentioned a specific article, this is the URL of that
  // article.  This was added in late May 2015, so it doesn't exist on all
  // articles.
  optional string url = 21 [
    (storage_method) = PULL_OUT,
    (string_length) = 767,
    (string_charset) = LATIN1
  ];

  optional DeviceType device_type = 6 [
    (required) = YES,
    (storage_method) = PULL_OUT
  ];

  optional string device_id = 7 [
    (required) = YES,
    (string_length) = 100,
    (string_charset) = LATIN1
  ];

  // Identifier for the computer who initiated this notification.
  optional string host = 8 [
    (string_length) = 100,
    (string_charset) = LATIN1
  ];

  // The actual text that we sent to the user.
  optional string text = 9 [
    (required) = YES,
    (string_length) = 1024
  ];

  optional int64 article_published_time = 10;

  repeated string deduping_stems = 11 [
    (string_length) = 4
  ];

  // Track attributes we use to prioritize events, so that we can check which
  // of these actually correlate with click-through.
  optional bool is_followed_company = 12 [
    (storage_method) = PULL_OUT
  ];
  optional bool is_company = 13 [
    (storage_method) = PULL_OUT
  ];
  optional bool is_event = 14 [
    (storage_method) = PULL_OUT
  ];
  optional int32 hot_count = 15 [
    (storage_method) = PULL_OUT
  ];
  optional double score = 16 [
    (storage_method) = PULL_OUT
  ];
  optional int32 notification_score = 17 [
    (storage_method) = PULL_OUT
  ];
  optional double nnet_score = 18 [
    (storage_method) = PULL_OUT
  ];
  optional double facebook_score = 19 [
    (storage_method) = PULL_OUT
  ];
  optional double twitter_score = 20 [
    (storage_method) = PULL_OUT
  ];
  optional int64 age_in_millis = 22 [
    (storage_method) = PULL_OUT
  ];

  enum Algorithm {
    UNKNOWN = 0;
    HISTORICAL = 1;
    NNET = 2;
    BLEND = 3; // Blend of Historical and Neural Net scorers.
    FOLLOWED_ENTITIES_ONLY = 4;
  }
  optional Algorithm algorithm = 23 [
    (storage_method) = PULL_OUT
  ];
}

// Historical record of how many clicks we've gotten per site for various
// content types - push notification, email, in-app.
message ClicksPerSite {
  option (database_collection) = "MySQL.ClicksPerSite";

  enum ClickType {
    UNKNOWN = 0;
    PUSH = 1;
    EMAIL = 2;
    IN_APP = 3;
  }
  optional ClickType click_type = 1 [
    (required) = YES,
    (storage_method) = PULL_OUT
  ];

  optional string root_domain = 2 [
    (required) = YES,
    (string_length) = 767,
    (storage_method) = PULL_OUT,
    (string_charset) = LATIN1
  ];

  optional int64 click_count = 3 [
    (required) = YES,
    (storage_method) = PULL_OUT
  ];

  // This may not always be known.  E.g. in-app, we don't store how many times
  // users actually see articles.
  optional int64 instance_count = 4 [
    (storage_method) = PULL_OUT
  ];

  // This is a score, from 0 to 1, that rates this site's CTR versus all other
  // sites in our corpus.
  optional double ctr_rating = 5 [
    (storage_method) = PULL_OUT
  ];
}
